# aurora-introductory-workshop

./: .gitignore  .template.env  0_aurora_workshop.ipynb  Aurora_Workshop_User_Guide.ipynb  README.md  aurora_demo_core.py  aurora_introduction.ipynb  aurora_workshop_documentation.ipynb  pyproject.toml  run_aurora_job.py
aml/setup/: load_era5.ipynb  register_model.ipynb  utils.py
notebooks/: 0_aurora_workshop.ipynb  finetune_configs.yaml  inference_configs.yaml
setup/: __init__.py
setup/common/: utils.py
setup/components/common/: constants.py  loss.py  utils.py
setup/components/evaluation/: component.py  main.py
setup/components/inference/: component.py  main.py
setup/components/training/: component.py  loss.py  main.py
setup/environments/aurora_minimal/: Dockerfile
setup/notebooks/: load_era5.ipynb  register_model.ipynb
