[project]
name = "aurora-introductory-workshop"
version = "0.1.0"
description = "Aurora fine-tuning on Azure Machine Learning workshop"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adlfs>=2025.8.0",
    "azure-ai-ml>=1.31.0",
    "azure-identity>=1.25.1",
    "azureml-mlflow>=1.60.0",
    "cartopy>=0.25.0",
    "dask>=2025.12.0",
    "fsspec>=2025.12.0",
    "gcsfs>=2025.12.0",
    "huggingface-hub>=1.2.4",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "microsoft-aurora>=1.8.0",
    "mlflow>=3.8.1",
    "xarray>=2025.12.0",
    "zarr>=3.1.5",
]
